Coink test app done

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
                 </ul>
                 <ul class="list-unstyled CTAs">
                     <li><a href="https://github.com/jval7" class="download">Github</a></li>
-                    <li><a href="www.linkedin.com/in/jhon-jairo-valderrama-00bb57196" class="article">Linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/jhon-jairo-valderrama-00bb57196" class="article">Linkedin</a></li>
                     <div class="line"></div>
                     <li><h6 class="center">Created by Jhon Valderrama</h6></li>
                 </ul>
